--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "dependencies": {
     "core-js": "^3.6.5",
     "firebase": "^7.23.0",
-    "vue": "^2.6.11"
+    "vue": "^2.6.11",
+    "vuejs-google-maps": "0.0.10"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
