--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "emailjs-com": "^2.6.3",
     "firebase": "^7.23.0",
     "leaflet": "^1.7.1",
     "vue": "^2.6.11",
